ghc-4335c07/testsuite/tests/polykinds/SigTvKinds2.stderr

SigTvKinds2.hs:7:48: error:
    • Expected kind ‘k1’, but ‘b’ has kind ‘k2’
    • In the second argument of ‘SameKind’, namely ‘b’
      In the type ‘SameKind a b’
      In the definition of data constructor ‘MkQ’
